# meal-planner

./: .gitignore  CHECKLIST.md  Detailed User Flow Pseudo-Code.txt  LICENSE  README.md  m2m.py  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  app.js  package-lock.json  package.json  server.js
backend/config/: README.md  db.js
backend/controllers/: README.md  groceryListController.js  mealPlanController.js  recipeController.js  userController.js
backend/docs/: README.md  full-app-flow.md  project-info.md  recipe-data-flow.md
backend/middleware/: auth.js
backend/models/: GroceryList.js  MealPlan.js  README.md  Recipe.js  User.js
backend/public/: index.html
backend/public/assets/: index-BC9TR0t7.js  index-BdH6c6Qr.css  (+2 more)
backend/routes/: README.md  groceryList.js  login.js  mealPlan.js  recipe.js  user.js
backend/scripts/: README.md  clearSeedData.js  listRecipes.js  seedGeneral.js  seedRandom.js  testSeedOffset.js
backend/services/: README.md  groceryListService.js  recipeService.js  spoonacularService.js  userService.js
backend/testing/: fullMockFlow.sh  generateMockGroceryList.js  seedMockUsers.js  seedRecipesFromMock.js  testAisleMapping.js  testRecipeDiscovery.js  testSpoonacular.js
backend/utils/: transformSpoonacular.js  unit.js
client/src/: App.js
frontend/: .env.local.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
models/: GroceryList.js
server/: index.js
utils/: unit.js
(+43 files in other folders)
