[project]
name = "meal-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "Spanda88", email = "shefalipandare@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "auth0-python (>=4.4.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"